test/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - secretName: secret-name
      hosts:
        - example.com
  rules:
    - host: example-0.com
      http:
        paths:
          - path: /path
            pathType: ImplementationSpecific # | Exact | Prefix
            backend:
              service: # or resource
                name: service-0
                port:
                  number: 80
    - host: example-1.com
      http:
        paths:
          - path: /path
            pathType: ImplementationSpecific # | Exact | Prefix
            backend:
              service: # or resource
                name: service-1
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-0
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 5
  selector:
    matchLabels: # or matchExpressions:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: nginx
