test/manifests/running.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubetui-running
spec:
  selector:
    app: kubetui-running
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubetui-running
spec:
  selector:
    matchLabels: # or matchExpressions:
      app: kubetui-running
  template:
    metadata:
      labels:
        app: kubetui-running
    spec:
      shareProcessNamespace: true
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 80
              name: http
        - name: sh
          image: alpine
          command:
            - sleep
            - "9999999999"
          securityContext:
            capabilities:
              add:
                - SYS_PTRACE
