test/manifests/simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubetui-simple
spec:
  selector:
    matchLabels: # or matchExpressions:
      app: kubetui-simple
    matchExpressions:
      - key: version
        operator: In
        values:
          - v1
  template:
    metadata:
      labels:
        app: kubetui-simple
        version: v1
    spec:
      initContainers:
        - name: echo
          image: alpine
          command:
            - sh
            - -c
          args:
            - "echo init-1; exit 0"

      containers:
        - name: app
          image: nginx
